+ Data loading and arg parsing

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -1,5 +1,10 @@
-[LF_SIZE]
-gridsize = 8
-imageheight = 256
-imagewidth = 256
+[PATH]
+hdf5_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
+hdf5_name = lf_set.h5
+model_dir =
+checkpoint_dir =
 
+[Network]
+batch_size = 1
+cuda = True
+gpu_id = 0
