--- a/PythonCode/config/hdf5.ini
+++ b/PythonCode/config/hdf5.ini
@@ -1,13 +1,15 @@
 [PATH]
-image_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets\test
+#image_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets\test
 #image_dir = C:\Users\seank\lf_volume_sets\test
+image_dir = /users/pgrad/martins7/turing/overflow-storage/lf_volume_sets/test
 metadata_name = metadata.csv
-output_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
+#output_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
 #output_dir = C:\Users\seank\lf_volume_sets\
+output_dir = /users/pgrad/martins7/turing/overflow-storage/lf_volume_sets
 hdf5_name = lf_set.h5
 
 [LF_SIZE]
-num_samples = 1
+num_samples = 10
 
 [DEFAULT]
 should_get_diff = True
