--- a/PythonCode/.vscode/settings.json
+++ b/PythonCode/.vscode/settings.json
@@ -3,5 +3,6 @@
     "python.linting.enabled": true,
     "python.linting.pylintUseMinimalCheckers": false,
     "python.linting.pylintArgs": ["--disable=unsubscriptable-object"],
-    "editor.wordWrapColumn": 79
+    "editor.wordWrapColumn": 79,
+    "editor.wordWrap": "bounded"
 }
