Added support for a train and val set Patches are extracted during training

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -5,6 +5,13 @@ model_dir =
 checkpoint_dir =
 
 [Network]
+#Size of the batches to use for the CNN - modify based on GPU memory
 batch_size = 1
+#Whether to use cuda for the learning - highly recommended to be True
 cuda = True
+#Which GPU to use for learning
 gpu_id = 0
+#The size of the patches to extract for training
+patch_size = 128
+#The number of patches to extract from each sample for training
+num_crops = 4
