Fixed an awful lot of bugs: Data loading the wrong thing Remembered to warp images before training Fixed batches Fixed model calling super incorrectly

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -1,10 +1,11 @@
 [PATH]
-hdf5_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
+#hdf5_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
+hdf5_dir = /users/pgrad/martins7/turing/overflow-storage/lf_volume_sets
 hdf5_name = lf_set.h5
-model_dir =
-checkpoint_dir =
+model_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/models
+checkpoint_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/checkpoints
 
-[Network]
+[NETWORK]
 #Size of the batches to use for the CNN - modify based on GPU memory
 batch_size = 1
 #Whether to use cuda for the learning - highly recommended to be True
