Added files for evaluation and demo

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -5,6 +5,8 @@ hdf5_dir = /media/martins7/TOSHIBA EXT/lf_volume_sets
 hdf5_name = lf_set.h5
 model_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/models
 checkpoint_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/checkpoints
+image_dir = /users/pgrad/martins7/turing/example
+output_dir = /users/pgrad/martins7/turing/example
 
 [NETWORK]
 #Size of the batches to use for the CNN - modify based on GPU memory
