--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ launch.json
 #Ignore the main workspace file, but not individual folder ones
 .vscode/settings.json
 *.ropeproject/
+PythonCode/runs/
