Initial tests are set up in notebook
Print statements added to reveal the problem

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ launch.json
 #Ignore the main workspace file, but not individual folder ones
 .vscode/settings.json
 *.ropeproject/
-PythonCode/logs/
+*/logs/
 */out/
