Refactor num_workers to config

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -21,3 +21,5 @@ gpu_id = 0
 patch_size = 128
 #The number of patches to extract from each sample for training
 num_crops = 4
+#The number of workers for data processing - 0 indicates single core usage
+num_workers = 8
