SGD with warm restarts implemented
See the paper in arxiv

--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -3,7 +3,7 @@
 hdf5_dir = /users/pgrad/martins7/temp
 #hdf5_dir = /users/pgrad/martins7/overflow-storage/lf_volume_sets
 #hdf5_dir = /media/martins7/TOSHIBA EXT/lf_volume_sets
-hdf5_name = lf_set.h5
+hdf5_name = small_set.h5
 model_dir = /users/pgrad/martins7/overflow-storage/outputs/models
 checkpoint_dir = /users/pgrad/martins7/overflow-storage/outputs/checkpoints
 image_dir = /users/pgrad/martins7/overflow-storage/example
