--- a/PythonCode/config/main.ini
+++ b/PythonCode/config/main.ini
@@ -1,18 +1,18 @@
 [PATH]
 #hdf5_dir = E:\Google_Drive\Masters\Dissertation\lf_volume_sets
-hdf5_dir = /users/pgrad/martins7/temp
+hdf5_dir = /users/pgrad/martins7/turing/overflow-storage/numpy_set
 #hdf5_dir = /users/pgrad/martins7/overflow-storage/lf_volume_sets
 #hdf5_dir = /media/martins7/TOSHIBA EXT/lf_volume_sets
-hdf5_name = small_set.h5
-model_dir = /users/pgrad/martins7/overflow-storage/outputs/models
-checkpoint_dir = /users/pgrad/martins7/overflow-storage/outputs/checkpoints
-image_dir = /users/pgrad/martins7/overflow-storage/example
-output_dir = /users/pgrad/martins7/overflow-storage/example
-tboard = /users/pgrad/martins7/overflow-storage/outputs/runs
+hdf5_name = lf_set.h5
+model_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/models
+checkpoint_dir = /users/pgrad/martins7/turing/overflow-storage/outputs/checkpoints
+image_dir = /users/pgrad/martins7/turing/overflow-storage/example
+output_dir = /users/pgrad/martins7/turing/overflow-storage/example
+tboard = /users/pgrad/martins7/turing/overflow-storage/outputs/runs
 
 [NETWORK]
 #Size of the batches to use for the CNN - modify based on GPU memory
-batch_size = 3
+batch_size = 4
 #Whether to use cuda for the learning - highly recommended to be True
 cuda = True
 #Which GPU to use for learning
