--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,23 @@
-absl-py==0.2.2
-astor==0.7.1
-backcall==0.1.0
+cloudpickle==0.5.3
 cycler==0.10.0
+dask==0.18.2
 decorator==4.3.0
-gast==0.2.0
-grpcio==1.13.0
 h5py==2.8.0
-ipykernel==4.8.2
-ipython==6.4.0
-ipython-genutils==0.2.0
-jedi==0.12.1
-jupyter-client==5.2.3
-jupyter-core==4.4.0
 kiwisolver==1.0.1
-Markdown==2.6.11
-matplotlib==2.2.2
-numpy==1.14.5
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.4
+matplotlib==2.2.3
+networkx==2.1
+numpy==1.15.1
 Pillow==5.2.0
 pkg-resources==0.0.0
-prompt-toolkit==1.0.15
-protobuf==3.6.0
-ptyprocess==0.6.0
-Pygments==2.2.0
+protobuf==3.6.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.5
-pyzmq==17.0.0
-simplegeneric==0.8.1
+PyWavelets==0.5.2
+scikit-image==0.14.0
+scipy==1.1.0
 six==1.11.0
-tensorboard==1.9.0
-tensorboardX==1.2
-tensorflow==1.9.0
-tensorflow-gpu==1.9.0
-termcolor==1.1.0
+tensorboardX==1.4
+toolz==0.9.0
 torch==0.4.0
 torchvision==0.2.1
-tornado==5.1
-traitlets==4.3.2
-wcwidth==0.1.7
-Werkzeug==0.14.1
